# Code-practice

./: README.md
C++ Concurrency in Action/Advanced thread management/: exp1.cpp  exp2.cpp
C++ Concurrency in Action/Designing lock-based concurrent data structures/: exp1.cpp
C++ Concurrency in Action/Designing lock-free concurrent data structures/: exp1.cpp
C++ Concurrency in Action/Hello, world of concurrency in C++/: main.cpp
C++ Concurrency in Action/Managing Threads/: Makefile  _main  example.cpp  exp2.cpp  exp3.cpp
C++ Concurrency in Action/Sharing data between threads/: exp2.cpp  exp3.cpp
C++ Concurrency in Action/Synchronizing concurrent operations/: exp5.cpp
C++ Concurrency in Action/Testing and debugging multithreaded applications/: exp1.cpp
C++ Concurrency in Action/The C++ memory model and operations on atomic types/: exp2.cpp
C++_Concurrency_in_Action/Advanced thread management/: interrupt_thread.cpp  test.cpp  thread_pool.cpp
C++_Concurrency_in_Action/Designing concurrent code/: exp1.cpp  exp2.cpp
C++_Concurrency_in_Action/Designing lock-based concurrent data structures/: exp1.cpp
C++_Concurrency_in_Action/Designing lock-free concurrent data structures/: exp2.cpp  lock_free_queue.h  lock_free_stack.h
C++_Concurrency_in_Action/Managing threads/: exp1.cpp
C++_Concurrency_in_Action/Parallel algorithms/: exp1.cpp
C++_Concurrency_in_Action/Sharing data between threads/: Makefile  exp1.cpp
C++_Concurrency_in_Action/Synchronizing concurrent operations/: exp1.cpp  exp2.cpp  exp3.cpp  exp4.cpp
C++_Concurrency_in_Action/The C++ memory model and operations on atomic types/: exp1.cpp
Data_structure/: priority_queue.cpp
Data_structure_and_algorithm/: backtrace.cpp  dynamic.cpp  list_node.cpp  other.cpp  tree.cpp  vector.cpp
Data_structure_and_algorithm/JZ/: backtrace.cpp  dynamic.cpp  list_node.cpp  (+5 more)
More_effective_C++/: item25.cpp  item26.cpp  item27.cpp  item28.cpp  item29.cpp  item30.cpp  item31.cpp  item31_2.cpp  item33.cpp
utils/HighPerformanceConcurrentServer/net/test/: CMakeLists.txt  echo_server.cpp
utils/log/test/: CMakeLists.txt  test_log_sync.cpp  test_pr.cpp
utils/threadpool/test/: CMakeLists.txt  test_threadpool.cpp
utils/timer/test/: CMakeLists.txt  test_timer.cpp
(+204 files in other folders)
